# PS2-Recompiler

./: .gitignore  README.md  build_shaders.sh  gradle.properties  keystore.jks  methods.txt  settings.gradle  settings.gradle.kts  spu2_core.cpp
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/chrispixel/ps2recompiler/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  README.md  jni_bridge.cpp  native-lib.cpp
app/src/main/cpp/aot/: aot_pipeline.cpp  aot_pipeline.h  asset_processor.cpp  asset_processor.h  elf_analyzer.cpp  elf_analyzer.h  hw_module_gen.cpp  hw_module_gen.h  mips_translator.cpp  mips_translator.h  project_generator.cpp  project_generator.h
app/src/main/cpp/backup_old/: audio_output.cpp  gs_vulkan.cpp  iop_recompiler.cpp  vu_recompiler.cpp
app/src/main/cpp/bios/: bios_native.cpp  bios_native.h  iop_bios.h
app/src/main/cpp/bus/: cdvd.cpp  cdvd.h  dma_controller.cpp  dma_controller.h  ee_hw.cpp  ee_hw.h  memory_map.cpp  memory_map.h  sif_bus.cpp  sif_bus.h
app/src/main/cpp/ee/: arm64_emitter.h  code_cache.h  ee_core.cpp  ee_core.h  ee_memory.cpp  ee_memory.h  ee_recompiler.cpp  ee_recompiler.h  mips_defs.h  mips_disasm.cpp  recompiler_arm32.cpp  recompiler_arm64.cpp  recompiler_arm64.h
app/src/main/cpp/gs/: gs_core.cpp  gs_core.h  gs_rasterizer.cpp  gs_vulkan.cpp  gs_vulkan.h  vulkan_context.cpp
app/src/main/cpp/gs/shaders/: frag.spv  ps2.frag  ps2.vert  spirv_shaders.h  vert.spv
app/src/main/cpp/homebrew/: pr2_homebrew.cpp  pr2_homebrew.h
app/src/main/cpp/input/: dualshock.cpp  dualshock.h
app/src/main/cpp/iop/: iop_core.cpp  iop_core.h  iop_recompiler.cpp  iop_recompiler.h
app/src/main/cpp/iso/: cdvd.cpp  iso_loader.cpp  iso_loader.h
app/src/main/cpp/spu2/: spu2_core.cpp  spu2_core.cpp.backup  spu2_core.cpp.backup2  spu2_core.h  spu2_core.h.backup
app/src/main/cpp/vu/: vif_unpacker.cpp  vif_unpacker.h  vu_core.cpp  vu_core.h  vu_recompiler.cpp  vu_recompiler.h
app/src/main/java/com/chrispixel/ps2recompiler/: GameEntry.kt  GameLibrary.kt  GameLibraryAdapter.kt  MainActivity.kt  RuntimeActivity.kt  TestActivity.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_runtime.xml  item_game.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/test/java/com/chrispixel/ps2recompiler/: ExampleUnitTest.kt
shaders/: ps2.frag  ps2.frag.spv  ps2.vert  ps2.vert.spv
